# yuri

./: .gitignore  BRIEFING.md  Cargo.toml  README.md  setup.sh  test_node.js  test_sdk.js  unpack-voice.sh
examples/: basic.rs  cached.rs  params.rs  playback.rs  streaming.rs
src/: emscripten.rs  lib.rs  main.rs  wasm.rs
wasm/: files.metadata  webtts.js
wasm/voicedata/: voice_embedded_compact.xml
wasm/voicedata_enu/: files.metadata  ve_pipeline_enu_zoe_22_embedded-compact_2-2-1.hdr
wasm/voicedata_rur/: ve_pipeline_rur_yuri_22_embedded-compact_1-0-5.hdr
wasm/voicedata_rur_321/: ve_pipeline_rur_yuri_22_embedded-compact_1-0-1.hdr  voice_embedded_compact.xml
wasm/voicedata_yuri_full/: ve_pipeline_rur_yuri_22_full_vssq5f22.hdr
wasm/voicedata_yuri_high/: ve_pipeline_rur_yuri_22_embedded-high_2-0-1.hdr
