[package]
name = "yuri"
version = "0.2.0"
edition = "2021"

[lib]
name = "yuri"
path = "src/lib.rs"

[[bin]]
name = "yuri"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:hound", "dep:rodio", "dep:dirs"]

[dependencies]
wasmtime = "29"
anyhow = "1"
serde_json = "1"
include-flate = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
tracing = "0.1"

dirs = { version = "6", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
hound = { version = "3", optional = true }
rodio = { version = "0.20", default-features = false, features = ["wav"], optional = true }
